# tjhlp-client

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
client-core/: CMakeLists.txt
client-core/resources/: app.qrc  index.html
client-core/src/: bridge.cpp  bridge.h  main.cpp
client-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
client-ui/src/: App.vue
client-ui/src/services/: qtBridge.ts
